# minc2-viewer

./: CMakeLists.txt  README.md  update_glfw.sh  update_imgui.sh  update_libminc.sh  update_minc2_simple.sh
src/: CMakeLists.txt
